@@ -30,13 +30,13 @@ libxml++ is a C++ wrapper for the <a href="http://www.xmlsoft.org">libxml</a> XM
 </ul>
 
 <h2>Documentation</h2>
-<p>The short <a href="docs/manual/html/index.html">manual</a> gives an overview of the libxml++ API. You can also browse online the <a href="docs/reference/html/hierarchy.html">reference documentation</a>.
+<p>The short <a href="manual/html/index.html">manual</a> gives an overview of the libxml++ API. You can also browse online the <a href="http://library.gnome.org/devel/libxml++/stable/">reference documentation</a>.
 </p>
 </ul>
 
 <h2>Development</h2>
-<p>Libxml++ uses the GNOME <a href="http://svn.gnome.org/viewvc/libxml%2B%2B/">Subversion repository</a>.</p>
-<p>Bugs and patches are tracked in GNOME's bugzilla. Here is a list of <a href="http://bugzilla.gnome.org/browse.cgi?product=libxml%2B%2B">open bugs</a>. Add new bugs <a href="http://bugzilla.gnome.org/enter_bug.cgi?product=libxml%2B%2B">here</a>.</p>
+<p>Libxml++ uses the GNOME <a href="http://git.gnome.org/browse/libxml++/">git repository</a>.</p>
+<p>Bugs and patches are tracked in GNOME's bugzilla. Here is a list of <a href="https://bugzilla.gnome.org/browse.cgi?product=libxml%2B%2B">open bugs</a>. Add new bugs <a href="https://bugzilla.gnome.org/enter_bug.cgi?product=libxml%2B%2B">here</a>.</p>
 <p>
 The <a href="http://sourceforge.net/mail/?group_id=12999">mailing list</a> is hosted on
 <a href="http://sourceforge.net/projects/libxmlplusplus/">sourceforge</a>.</p>
