@@ -7,6 +7,19 @@
 #ifndef __LIBXMLCPP_H
 #define __LIBXMLCPP_H
 
+/** @mainpage libxml++ Reference Manual
+ *
+ * @section description Description
+ *
+ * libxml++ is a C++ wrapper for the libxml2 XML parser library. libxml2 and
+ * glibmm are required. libxml++ presents a simple C++-like API that can
+ * achieve common tasks with less code.
+ *
+ * @section use Use
+ *
+ * To use libxml++ in your application, include one of the header files. A
+ * @c pkg-config file is provided to simplify compilation.
+ */
 #include <libxml++/exceptions/internal_error.h>
 #include <libxml++/exceptions/parse_error.h>
 #include <libxml++/parsers/domparser.h>
